feat: Implement admin dashboard page with security