@@ -9,9 +9,10 @@ import com.jhssong.univletter.domain.subscribe.entity.Subscribe;
 import com.jhssong.univletter.domain.subscribe.repository.SubscribeRepository;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -55,6 +56,11 @@ public class SubscribeService {
 
     public List<SubscribeResDTO> getAllSubscribers() {
         List<Subscribe> subscribers = subscribeRepository.findAll();
-        return subscribers.stream().map(SubscribeResDTO::fromEntity).collect(Collectors.toList());
+        return subscribers.stream().map(SubscribeResDTO::fromEntity).toList();
+    }
+
+
+    public Page<SubscribeResDTO> getPageableSubscribers(Pageable pageable) {
+        return subscribeRepository.findAll(pageable).map(SubscribeResDTO::fromEntity);
     }
 }
